# iggy-poc

./: README.md
.github/workflows/: ci.yml
clients/java/: pom.xml
clients/java-sdk/: pom.xml
clients/java-sdk/src/main/java/com/example/iggy/: AvroConsumer.java  AvroProducer.java  ProtobufConsumer.java  ProtobufProducer.java  Schemas.java
clients/java-sdk/src/main/resources/schemas/: event.avsc
clients/java-sdk/src/test/java/com/example/iggy/: AvroSerializationTest.java  MessageSerializationTest.java  ProtobufSerializationTest.java
clients/python/: avro_consumer.py  avro_producer.py  protobuf_consumer.py  protobuf_producer.py  requirements.txt  schemas.py
clients/python/tests/: test_avro_format.py  test_consumer.py  test_producer.py  test_protobuf_format.py
clients/rust/: Cargo.toml
clients/rust/src/: avro_consumer.rs  avro_producer.rs  consumer.rs  producer.rs  protobuf_consumer.rs  protobuf_producer.rs  schemas.rs
clients/typescript/: package-lock.json  package.json
clients/typescript/src/: avroConsumer.ts  avroProducer.ts  consumer.ts  producer.ts  protobufConsumer.ts  protobufProducer.ts  schemas.ts
clients/typescript/src/schemas/: event.proto
clients/typescript/tests/: avroFormat.test.ts  message.test.ts  protobufFormat.test.ts
helm/: README.md
helm/examples/: values-cluster.yaml  values-dev.yaml  values-production.yaml
helm/iggy/: Chart.yaml  values.yaml
helm/iggy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  persistentvolumeclaim.yaml  secret.yaml  service-headless.yaml  service.yaml  statefulset.yaml
(+8 files in other folders)
